--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-
+apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -61,4 +62,6 @@ dependencies {
 
     // qrcode
     implementation 'com.google.android.gms:play-services-vision:16.2.0'
+
+    // realm
 }
