第一次開啟app，尚未建立device，或是目前沒有device，就轉跳到按鈕頁面，請求新增device

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".ui.device.StarterActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+        <activity
             android:name=".ui.device.ScanActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
