完成裝置管理、修正 Device List 項目下方陰影被切掉、Calibration 圖片半透明化、修改nav icon、starter頁面美化

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
         maven {
             url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
         }
+        maven { url "https://jitpack.io" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
@@ -27,6 +28,7 @@ allprojects {
         maven {
             url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
         }
+        maven { url "https://jitpack.io" }
     }
 }
 
