--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    // segment button
+    implementation 'com.github.addisonelliott:SegmentedButton:3.1.8'
 }
