--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,16 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
         <activity
+            android:name=".ui.device.SettingsActivity"
+            android:theme="@style/AppMaterialTheme"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+        <activity
+            android:name=".ui.device.StreamingActivity"
+            android:theme="@style/AppMaterialTheme"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+        <activity
             android:name=".ui.people.EditorActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
