--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ dependencies {
 
     // qrcode
     implementation 'com.google.android.gms:play-services-vision:16.2.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 
     // glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
