--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 
@@ -59,6 +60,11 @@
             tools:ignore="LockedOrientationActivity"></activity>
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+
+        <activity
+            android:name=".ui.network.SettingsActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
     </application>
