--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,10 @@
             tools:ignore="LockedOrientationActivity"></activity>
 
         <activity
+            android:name=".ui.network.WIFIListActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+        <activity
             android:name=".ui.network.SettingsActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
