--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,10 +4,13 @@
     package="com.ulsee.thermalapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /><!-- scan wifi -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!-- scan wifi -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> <!-- scan wifi -->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/> <!-- change wifi -->
+    <!-- qrcode -->
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
 
