--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,10 @@
             android:name=".ui.tutorial.TutorialStep2Activity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
+        <activity
+            android:name=".ui.notification.NotificationActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
     </application>
 
 </manifest>
