--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,6 +88,10 @@
             android:name=".ui.notification.NotificationActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
+        <activity
+            android:name=".ui.notification.NotificationActivity2"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
 
         <!-- zxing qrcode -->
         <activity
