--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,11 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
         <activity
+            android:name=".ui.device.IPCListActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+
+        <activity
             android:name=".ui.device.ScanActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
