--- a/build.gradle
+++ b/build.gradle
@@ -27,10 +27,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        flatDir { dirs '../aar' }
         maven {
             url 'http://oss.jfrog.org/artifactory/oss-snapshot-local'
         }
         maven { url "https://jitpack.io" }
+
     }
 }
 
