1. switch to the correct hotspot when scaning QR code 2. display hotspot list and connect to the selected one

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,10 @@
             android:name=".ui.device.IPCListActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
-
+        <activity
+            android:name=".ui.device.HotspotActivity"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
         <activity
             android:name=".ui.device.ScanActivity"
             android:screenOrientation="portrait"
