--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/> <!-- scan wifi -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> <!-- scan wifi -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/> <!-- change wifi -->
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/> <!-- change wifi for Android 10 -->
     <!-- qrcode -->
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-sdk tools:overrideLibrary="com.google.zxing.client.android" />
