--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -88,14 +88,14 @@
             android:name=".ui.network.SettingsActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
-        <activity
-            android:name=".ui.tutorial.TutorialStep1Activity"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"></activity>
-        <activity
-            android:name=".ui.tutorial.TutorialStep2Activity"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"></activity>
+<!--        <activity-->
+<!--            android:name=".ui.tutorial.TutorialStep1Activity"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            tools:ignore="LockedOrientationActivity"></activity>-->
+<!--        <activity-->
+<!--            android:name=".ui.tutorial.TutorialStep2Activity"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            tools:ignore="LockedOrientationActivity"></activity>-->
         <activity
             android:name=".ui.notification.NotificationActivity"
             android:screenOrientation="portrait"
