--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
         <activity
-            android:name=".ui.device.IPCListActivity"
+            android:name=".ui.device.LanDevicesActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
         <activity
@@ -54,10 +54,10 @@
             android:name=".ui.device.ScanActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
-        <activity
-            android:name=".ui.device.CalibrationActivity"
-            android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"></activity>
+<!--        <activity-->
+<!--            android:name=".ui.device.CalibrationActivity"-->
+<!--            android:screenOrientation="portrait"-->
+<!--            tools:ignore="LockedOrientationActivity"></activity>-->
         <activity
             android:name=".ui.device.SettingsActivity"
             android:theme="@style/AppMaterialTheme"
