移除對x86 processor的支持

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,11 @@ android {
         applicationId "com.ulsee.thermalapp"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 12
+        versionCode 13
         versionName "3.0.4"
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -24,6 +27,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+//        debug {
+//            minifyEnabled true
+//            shrinkResources true
+//            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+//        }
     }
 
 // To inline the bytecode built with JVM target 1.8 into
