--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,11 @@ android {
         applicationId "com.ulsee.thermalapp"
         minSdkVersion 24
         targetSdkVersion 28
-        versionCode 4
+        versionCode 5
         versionName "3.0.4"
+        ndk {
+            abiFilters "armeabi-v7a", "arm64-v8a"
+        }
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
