--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,12 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"
             tools:ignore="LockedOrientationActivity"></activity>
+        <activity
+            android:name=".ui.people.DeviceSyncActivity"
+            android:theme="@style/PeopleEditTheme"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            tools:ignore="LockedOrientationActivity"></activity>
 
         <activity
             android:name=".MainActivity"
