--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,11 @@
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"></activity>
         <activity
+            android:name=".ui.device.MultiDeviceActivity"
+            android:theme="@style/AppMaterialTheme"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"></activity>
+        <activity
             android:name=".ui.people.EditorActivity"
             android:theme="@style/PeopleEditTheme"
             android:screenOrientation="portrait"
